--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "upload-demo",
+  "name": "tree-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.22.0",
+    "antd": "^3.20.7",
     "babel-plugin-import": "^1.12.0",
-    "customize-cra": "^0.5.0",
-    "less": "^3.10.1",
-    "less-loader": "^5.0.0",
-    "react": "^16.9.0",
+    "customize-cra": "^0.4.1",
+    "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
